@@ -3360,7 +3360,7 @@ Game_object *Actor::attacked
 					// Or party member of dead Avatar?
 	    (party_id >= 0 && gwin->get_main_actor()->is_dead()))
 		return 0;
-	if (attacker->get_schedule_type() == Schedule::duel)
+	if (attacker && attacker->get_schedule_type() == Schedule::duel)
 		return this;	// Just play-fighting.
 					// Watch for Skara Brae ghosts.
 	if (npc_num > 0 && Game::get_game_type() == BLACK_GATE &&
